# bgu_cogniteam_social_navigation

./: Dockerfile  README.md  entrypoint.sh  persons.json  push_component.sh  reset_nodes.sh  test.rviz
nav2_costmap_2d/launch/: example_params.yaml
nav2_map_server/src/map_server/: map_server.cpp
navigation2/nav2_bringup/bringup/launch/: bringup_launch.py  nav2_slam_navigation_cogniteam.launch.py
navigation2/nav2_bringup/bringup/params/: nav2_params.yaml
navigation2/nav2_bt_navigator/behavior_trees/: navigate_w_replanning_and_recovery.xml
navigation2/nav2_costmap_2d/src/: costmap_2d_ros.cpp
social_navigation_launch/: CMakeLists.txt  package.xml  setup.py
social_navigation_launch/launch/: bringup_launch.py
social_navigation_launch/params/: nav2_params.yaml
social_navigation_manager/: CMakeLists.txt  package.xml
social_navigation_manager/src/: social_navigation_manager_node.cpp
social_navigation_ui/: CMakeLists.txt  map.pgm  map.yaml  map_server_params.yaml  package.xml  setup.cfg  setup.py
social_navigation_ui/old/: map.yaml
social_navigation_ui/resource/: map.pgm
social_navigation_ui/social_navigation_ui/: Oval.py  Person.py  PersonsGenerator.py  plot_proxemics_oval.py  ros_wrapper.py  social_navigation_ui_node.py  utils.py
